
2012-09-03  Rajeev Ranjan

        * Fix min/max limit setting to respect field boundaires EXCEPT
          for years which have no boundaries with
          elm_datetime_field_limit_set()

2012-09-03  Bluezery

        * Fix re-order animation when it doesn't end correctly.
        
2012-09-03  Shinwoo Kim (kimcinoo)

        * Fix popup to apply the same style to the notify sub-widget.
        
2012-09-12  Thiep Ha

        * Fix ctxpopup direction if -1 is uses as priority.

2012-09-13  M.V.K. Sumanth

        * Fix diskselector when bounce off and round enabled.

2012-09-14  Shinwoo Kim (kimcinoo)

        * Fix info field set for bubble widget.

2012-09-19 Michael Bouchaud (yoz)

        * fix resizing on naviframe when an item is poped

2012-09-20 Michael Bouchaud (yoz)

         * fix wrong size calc in naviframe when an item have setted
           tittle_visible_set to false.

2012-09-25  Cedric Bail

	* Escape theme filename correctly.

2012-09-28  Shinwoo Kim (kimcinoo)

        * Fix disk selector selection of middle item when obj not at 0.

2012-10-04  Igor Murzov

	* fix copy&paste error in elm_flip.
	* fix possible invalid memory access in elm_access.

2012-10-10  Shinwoo Kim (kimcinoo)

        * Fix diskselector bug on round with appended items with more
        than 4 items.

2012-10-11  WooHyun Jung

	* Fix a bug in elm_panel. Content should be a sub-object of elm_panel.

2012-10-12  Shinwoo Kim (kimcinoo)

        * Fix conform widget to be part of focus chain.

2012-10-13  ChunEon Park (Hermet)

        * Fix the transit to launch the effect directly when elm_transit_go is called.

2012-10-15  Prince Dubey Kumar <prince.dubey@samsung.com>

        * Fix genlist reorder mode item not being resized on genlist resize.

2012-10-17  Jihoon Kim (jihoon)

        * Fix elm_widget_type_check warning in the _on_size_hints_changed of elm_video.

2012-10-19  Tae-Hwan Kim (Bluezery)

        * Fixed wrong_calc_job parameter.